@@ -5,14 +5,6 @@
 
 module Shapes
 {
-  enum COLOR
-  {
-    WHITE,
-    RED,
-    YELLOW,
-    GREEN
-  };
-
   enum ReturnStatus
   {
     RETURN_OK,
