@@ -1,0 +1,92 @@
+<!--//$Id$  -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>DDS4CCM Tutorial Shapes</title>
+</head>
+
+<body>
+  <h1>IDL files</h1>
+  <p>
+    The IDL files are generated by the modeling tools.<br/>
+    To understand this shapes tutorial better, it'll give an overview of
+    which IDL files are generated.
+  </p>
+
+  <h2>Common IDL files</h2>
+  <p>
+    Below an simplied represenation of the common IDL files. Use the links to view
+    the file itself.<br/>
+    The following IDL files can be found in Shapes_asm/ports:
+    <ul>
+      <li><a href="../Shapes_asm/ports/Shapes_defn.idl">Shapes_defn.idl<a><br/>
+          <code>module Shapes<br/>
+                {<br/>
+                &nbsp;&nbsp;enum ReturnStatus<br/>
+                &nbsp;&nbsp;{<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;RETURN_OK,<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;RETURN_ERROR<br/>
+                &nbsp;&nbsp;};<br/>};
+          </code>
+      </li>
+      <li><a href="../Shapes_asm/ports/Shapes_conn.idl">Shapes_conn.idl<a><br/>
+          <code>module Shapes<br/>
+                {<br/>
+                &nbsp;&nbsp;typedef sequence<ShapeType> ShapeTypeSeq;<br/>
+                &nbsp;&nbsp;module ::CCM_DDS::Typed < ::ShapeType, ShapeTypeSeq>
+                  ShapesConnector;<br/>
+                };<br/>
+          </code>
+          This IDL contains the declaration of the DDS4CCM connector. The used
+          module is typed.
+      </li>
+      <li><a href="../Shapes_asm/ports/Shapes_msg.idl">Shapes_msg.idl<a><br/>
+          <code>struct ShapeType {<br/>
+                &nbsp;&nbsp;string color; //@key<br/>
+                &nbsp;&nbsp;long x;<br/>
+                &nbsp;&nbsp;long y;<br/>
+                &nbsp;&nbsp;long shapesize;<br/>
+                };<br/>
+          </code>
+          The ShapeType struct is the the data structure that is send from the
+          sender to the receiver through DDS.<br/>
+          This file is also used as input for the RTI DDS generator. Since we're
+          using RTI DDS in this example, the key of this struct is defined with
+          <code>//@key</code> as shown above.
+      </li>
+    </ul>
+  </p>
+
+  <h2>Controller IDL files</h2>
+  <p>
+    The controller is used to modify the location and the size of the registered
+    shape. The controller invokes methods on the sender component to establish this.
+    These methods are part of an interface which the sender should provide. The
+    controller uses this interface.<br/>
+    The interface declaration is in
+    <a href="../Shapes_asm/Shapes_Control_comp/ports/Shapes_Control_obj.idl">
+      Shapes_asm/Shapes_Control_comp/ports/Shapes_Control_obj.idl<a><br/>
+    The IDL looks like this:<br/>
+  </p>
+  <p>
+    <code>module Shapes<br/>
+          {<br/>
+          &nbsp;&nbsp;interface Control_obj<br/>
+          &nbsp;&nbsp;{<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;ReturnStatus setSize (in unsigned short size);<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;ReturnStatus setLocation (in unsigned short x,<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;in unsigned short y);<br/>
+          &nbsp;&nbsp;};<br/>
+          };<br/>
+    </code>
+    The controller component periodically calls the setSize and setLocation methods
+    on the sender component.
+  </p>
+  <p>
+    The component IDL file itself is located in 
+    <a href="../Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp.idl">
+      Shapes_asm/Shapes_Control_comp/ports/Shapes_Control_comp.idl<a><br/>
+    and looks like this:
+  </p>
+
+</body>
